infra/dagobah/traefik/conf/dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-secure
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.dagobah2.txit.me`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares: []
        # - name:  oauth-auth-redirect
        #   namespace: traefik
